# topic-evolution-model

./: .gitignore  CMakeLists.txt  Makefile  README.md  definitions.md  description.md
.build/: out
.build/src/: Corpus.cpp.d  CorpusPeriod.cpp.d  Document.cpp.d  main.cpp.d
.github/workflows/: ci.yaml
evaluation/: README.md  classifier.ipynb  dim-reductions.ipynb  feature-distributions.ipynb  helpers.py  param-selection.ipynb  requirements.txt
script/: README.md  example.ipynb  model.py  nlp.py  process.py  requirements.txt  training.py  visualization.py
src/: Corpus.cpp  Corpus.hpp  CorpusPeriod.cpp  CorpusPeriod.hpp  Document.cpp  Document.hpp  SemanticGraph.cpp  SemanticGraph.hpp  TEException.hpp  argparse.cpp  argparse.hpp  helpers.cpp  helpers.hpp  main.cpp  metrics.cpp  metrics.hpp  test.cpp  test.hpp  topics.cpp  topics.hpp  types.hpp  yaml.cpp  yaml.hpp
src/test/: corpus.cpp  main.cpp  period.cpp  tests.hpp  topics.cpp  yaml.cpp
term-distance/: Dockerfile  Makefile  app.py  model.py  models.py  requirements.txt  run.sh
